tests/ui/error-codes/E0054.stderr
error[E0054]: cannot cast as `bool`
  --> $DIR/E0054.rs:3:24
   |
LL |     let x_is_nonzero = x as bool;
   |                        ^^^^^^^^^ help: compare with zero instead: `x != 0`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0054`.
