tests/ui/error-codes/E0054.rs
fn main() {
    let x = 5;
    let x_is_nonzero = x as bool; //~ ERROR E0054
}
